tests/error/op_match.gw
// [contains] no match found for operator
 Object o;
null +=> o;
